--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body class="dark:bg-gray-900 dark:text-white">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
